--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <!--leaderBoard介面-->
-<div id="leaderBoard" style="display:none;">
+<div id="leaderboard" style="display:none;">
     <h2>~ Falling Ball 榮譽榜 ~</h2>  
     <table>
         <thead>
